2007-02-19  Timothy Hatcher  <timothy@apple.com>

        Reviewed by Darin Adler.

        <rdar://problem/4841078> Remove the Mail.app editable link clicking behavior workaround when it is no longer needed

        * WebKit.xcodeproj/project.pbxproj:
        * WebView/WebView.mm:
        (-[WebView setPreferences:]):

2007-02-19  Anders Carlsson  <acarlsson@apple.com>

        Reviewed by Adam.

        <rdar://problem/4868242>
        http://bugs.webkit.org/show_bug.cgi?id=12670
        REGRESSION: Many 3rd Party Apps crash in WebCore::DocumentLoader::frameLoader() (12670)
        
        Bring back the semantic we had that a web view should be retained for as long as something is loading. Use the identifier
        to object hash map for this.

        * WebView/WebView.mm:
        (-[WebView _addObject:forIdentifier:]):
        (-[WebView _removeObjectForIdentifier:]):

2007-02-18  Brady Eidson  <beidson@apple.com>

        Reviewed by Oliver

        <rdar://problem/4985321> - Can't edit templates for Web Gallery/Web Page Export in Aperture

        * Misc/WebKitVersionChecks.h: Add a #define for this APERTURE quirk
        * WebView/WebView.mm:
        (-[WebView _shouldChangeSelectedDOMRange:toDOMRange:affinity:stillSelecting:]):
         If the current app is Aperture and it was linked against Tiger WebKit, always allow selection change

2007-02-17  Lars Knoll <lars@trolltech.com>

        Reviewed by Maciej.

        Additional coding by Maciej, additional review by Oliver.

        Added implementations for the new callbacks in EditorClient
        and ChromeClient (basically moved from WebFrameBridge).
        Cleaned up some code paths that are not called anymore
        and done fully inside WebCore now.

        * DefaultDelegates/WebDefaultContextMenuDelegate.mm:
        * Misc/WebElementDictionary.mm:
        * Misc/WebNSAttributedStringExtras.mm:
        * Plugins/WebBaseNetscapePluginView.mm: