@@ -1,3 +1,13 @@
+2007-02-20  Anders Carlsson  <acarlsson@apple.com>
+
+        Reviewed by Mitz.
+
+        <rdar://problem/5009627> REGRESSION: Repro overrelease of WebView in failed load, seen in DumpRenderTree
+        
+        * WebView/WebView.mm:
+        (-[WebView _removeObjectForIdentifier:]):
+        Return early if the identifier can't be found in the map.
+
 2007-02-19  Timothy Hatcher  <timothy@apple.com>
 
         Reviewed by Darin Adler.
